# aat-rust

./: .env  .gitignore  Cargo.toml  DL AND NLP.md  Makefile  README.md
ai_service/: main.py  model.py  nlp.py  requirements.txt  start.sh  test_model.py  test_nlp.py  test_real.py
src/: ai_client.rs  crypto.rs  main.rs  telemetry.rs
src/firewall/: mod.rs
src/gui/: app.rs
src/models/: mod.rs
