[package]
name = "ssd_info_cli"
version = "0.1.0"
edition = "2021"
description = "SSD Information GUI Tool"
license = "MIT"
authors = ["Bharath <bharathsencha@duck.com>"]

[dependencies]
eframe = "0.29"
egui = "0.29"
image = "0.25.8"
nix = "0.30.1"
regex = "1.12.2"
sysinfo = "0.37.2"
# Lightweight synchronous HTTP client for calling the Python AI service
ureq = "2"


serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
base64 = "0.21"

reqwest = { version = "0.12", features = ["blocking","json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }

# DEB PACKAGE CONFIGURATION
[package.metadata.deb]
maintainer = "Bharath <bharathsencha@duck.com>"
section = "utils"
priority = "optional"
depends = "smartmontools, libgtk-3-0"
assets = [
    ["target/release/ssd_info_cli", "usr/bin/", "755"]
]
